2013-07-03 Ivan Vucica <ivan@vucica.net>

	* MyTransparentGL/MyGL.gorm/data.classes:
	* MyTransparentGL/MyGL.gorm/objects.gorm:
	* MyTransparentGL/MyGL.gorm/data.info:
	* MyTransparentGL/README:
	* MyTransparentGL/AppController.m:
	* MyTransparentGL/GNUmakefile:
	A demo that demonstrates how to create a transparent NSOpenGLView.

2012-01-23 Fred Kiefer <FredKiefer@gmx.de>

	* Calculator/CalcBrain.m,
	* Calculator/CalcFace.m: Remove duplicated ivar declaration in
	implementation file.
	Patch by Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

2011-05-19 Fred Kiefer <FredKiefer@gmx.de>

	* Old/nscursor.m
	* Old/windows.m
	* Old/menu.m
	* Old/GNUmakefile: Get these old tests to compile again.

2011-05-19 Fred Kiefer <FredKiefer@gmx.de>

	* MyGL/AppController.m: Protect the name id.
	Patch by Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

2010-07-25  Eric Wasylishen <ewasylishen@gmail.com>

	* MyGL/main.m: Use NSApplicationMain() as the current method wasn't
	loading the main nib

2010-06-02 Adam Fedor <fedor@gnu.org>

	* Fix a few compiler warnings

2010-04-14  Eric Wasylishen <ewasylishen@gmail.com>

	* MyGL/AppController.h:
	* MyGL/AppController.m: Modify MyGL to have several NSOpenGLView's
	displayed in NSSplitView's.

2010-03-07  Nicola  <nicola.pero@meta-innovation.com>

	* GNUmakefile (SUBPROJECTS): Do not compile MyGL by default as not
	everyone has OpenGL.

2009-05-20  Fred Kiefer <FredKiefer@gmx.de>

	* ExampleTheme: New directory with one example theme
	by Fred Morcos <fred.morcos@gmail.com>

2009-01-07  Fred Kiefer <FredKiefer@gmx.de>

	* ToolbarExample/SecondWindowOwner.m (-awakeFromNib): Adopt to
	changes in NSToolbar. Now the toolbar retains the view.

2009-01-01  Fred Kiefer <FredKiefer@gmx.de>

	* GSTest/NSAnimation-test/AnimationView.m: Correct line endings.
	* ToolbarExample: Adopt to changes in NSToolbar and the removal of
	GSToolbar.

2007-05-24 Adam Fedor <fedor@gnu.org>

	* Add MyGL, by Banlu Kemiyatorn
